--- a/1DB_LSscript2.ipynb
+++ b/1DB_LSscript2.ipynb
@@ -50,13 +50,13 @@
    "source": [
     "# ### Load Data if Model Already Exists ###\n",
     "# training data\n",
-    "snapshot_full = pickle.load(open(\"./snapshot_git.p\", 'rb'))\n",
+    "snapshot_full = pickle.load(open(\"./WLaSDI/snapshot_git.p\", 'rb'))\n",
     "snapshot_full = snapshot_full[:,:-1].astype('float32')\n",
     "\n",
     "# testing parameters and data\n",
     "amp_test = np.array([0.8])\n",
     "width_test = np.array([1.0])\n",
-    "snapshot_full_FOM = pickle.load(open(f\"./FOM_a{amp_test[0]}_w{width_test[0]}.p\",'rb'))\n",
+    "snapshot_full_FOM = pickle.load(open(f\"./WLaSDI/FOM_a{amp_test[0]}_w{width_test[0]}.p\",'rb'))\n",
     "FOM_time = snapshot_full_FOM['time']\n",
     "snapshot_full_FOM = snapshot_full_FOM['FOM'][:,:-1].astype('float32')"
    ]
