--- a/1DB_LSscript2.ipynb
+++ b/1DB_LSscript2.ipynb
@@ -29,8 +29,8 @@
     "import sys,time\n",
     "import os\n",
     "import pickle\n",
-    "from WLaSDI import WLaSDI\n",
-    "from WLaSDI_wendy import WLaSDI_wendy\n",
+    "from WLaSDI.WLaSDI import WLaSDI\n",
+    "from WLaSDI.WLaSDI_wendy import WLaSDI_wendy\n",
     "import matplotlib\n",
     "from scipy.interpolate import interp2d, Rbf"
    ]
